--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -1,3 +1,137 @@
 main {
-    min-height: 75vh;
+    color: var(--text-color);
+}
+
+.user_details {
+    margin-top: 1.75rem;
+    border-radius: 15px;
+    display: grid;
+    grid-template-columns: 120px auto auto;
+    column-gap: 1rem;
+    padding: 2.5rem;
+    background-color: var(--main-bg-color);
+    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.155);
+}
+
+.name {
+    color: var(--grey-text-color);
+}
+
+.username {
+    text-decoration: none;
+    color: var(--username-color);
+}
+
+.joinDate {
+    justify-self: end;
+}
+
+.user_main {
+    grid-column: 2/-1;
+    display: grid;
+}
+
+.user_stats {
+    grid-column: 2/-1;
+    background-color: var(--stats-bg-color);
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 0.75rem 1.5rem;
+    border-radius: 8px;
+    margin: 1.5rem 0;
+}
+
+.user_main>p {
+    margin-top: 1rem;
+    line-height: 26px;
+}
+
+.repos>h5,
+.followers>h5,
+.following>h5 {
+    color: var(--text-color);
+    font-weight: 300;
+}
+
+.repos>h2,
+.followers>h2,
+.following>h2 {
+    color: var(--grey-text-color);
+    font-size: 22px;
+}
+
+.user_links {
+    grid-column: 2/-1;
+
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 1.25rem;
+}
+
+.link {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+}
+
+.link>img {
+    margin-right: 1rem;
+}
+
+.user_details>img {
+    width: 100px;
+    height: 100px;
+    grid-row: 1/3;
+    border-radius: 50%;
+}
+
+
+@media (max-width: 550px) {
+    .user_details>img {
+        width: 70px;
+        height: 70px;
+        grid-row: 1/3;
+    }
+
+    .user_details>div>h1 {
+        font-size: 16px;
+    }
+
+    .user_details {
+        grid-template-columns: 80px auto;
+        padding: 1rem;
+    }
+
+    .joinDate {
+        justify-self: start;
+        font-size: 13px;
+        text-align: justify;
+    }
+
+    .user_main {
+        grid-column: 1/-1;
+        margin-top: 1rem;
+    }
+
+    .user_main>p {
+        font-size: 13px;
+    }
+
+    .user_stats {
+        grid-column: 1/-1;
+    }
+
+    .user_links {
+        grid-column: 1/-1;
+        display: grid;
+        grid-template-columns: auto;
+    }
+
+    .repos>h2,
+    .followers>h2,
+    .following>h2 {
+        text-align: center;
+    }
 }
