--- a/src/styles/search.module.css
+++ b/src/styles/search.module.css
@@ -1,14 +1,15 @@
 form {
     display: flex;
     align-items: center;
-    background-color: var(--main-color);
+    background-color: var(--main-bg-color);
     border-radius: 15px;
     gap: 1rem;
     height: 69px;
     padding: 0 0.6rem 0 2rem;
 
-
     position: relative;
+
+    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.155); 
 }
 
 .error {
@@ -49,7 +50,7 @@ button {
     font-family: inherit;
     font-size: 16px;
     font-weight: 700;
-    color: var(--text-color);
+    color: #FFFFFF;
     border-radius: 8px;
     background-color: var(--btn-bg-color);
 }
@@ -57,4 +58,17 @@ button {
 button:hover {
     cursor: pointer;
     background-color: var(--btn-hover-color);
+}
+
+@media (max-width: 550px){
+    form {
+        height: 60px;
+        border-radius: 15px;
+        padding: 1rem 0.5rem 1rem 1rem;
+    }
+
+    button {
+        height: 45px;
+        border-radius: 10px;
+    }
 }
