--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -46,6 +46,7 @@ main {
 .user_main>p {
     margin-top: 1rem;
     line-height: 26px;
+    min-width: 490px;
 }
 
 .repos>h5,
@@ -80,16 +81,32 @@ main {
     margin-right: 1rem;
 }
 
-.user_details>img {
+.link > p {
+    color: var(--text-color);
+}
+
+.avatar {
     width: 100px;
     height: 100px;
     grid-row: 1/3;
     border-radius: 50%;
 }
 
+.twitter , .blog {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.twitter:hover , .blog:hover {
+    text-decoration: underline;
+}
+
+
+
+
 
 @media (max-width: 550px) {
-    .user_details>img {
+    .avatar {
         width: 70px;
         height: 70px;
         grid-row: 1/3;
@@ -117,6 +134,7 @@ main {
 
     .user_main>p {
         font-size: 13px;
+        min-width: 100px;
     }
 
     .user_stats {
