--- a/src/styles/search.module.css
+++ b/src/styles/search.module.css
@@ -60,6 +60,7 @@ button:hover {
     background-color: var(--btn-hover-color);
 }
 
+
 @media (max-width: 550px){
     form {
         height: 60px;
@@ -70,5 +71,9 @@ button:hover {
     button {
         height: 45px;
         border-radius: 10px;
+    }
+
+    input::placeholder {
+        font-size: 14px;
     }
 }
