changes - fixed bugs - added named exports - improved code and readibility - completed the development task

--- a/src/Components/LoadingScreen/skeleton.module.css
+++ b/src/Components/LoadingScreen/skeleton.module.css
@@ -14,7 +14,7 @@
 
     .user_links {
         grid-template-columns: auto;
-        gap: 0;
+        gap: 1rem;
         grid-column: 1/-1;
     }
 }
