--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -26,7 +26,7 @@ main {
     justify-self: end;
 }
 
-.user_main {
+.bio {
     grid-column: 2/-1;
     display: grid;
 }
@@ -43,7 +43,7 @@ main {
     margin: 1.5rem 0;
 }
 
-.user_main>p {
+.bio{
     margin-top: 1rem;
     line-height: 26px;
     min-width: 490px;
@@ -77,11 +77,11 @@ main {
     font-size: 15px;
 }
 
-.link>img {
+.link>div {
     margin-right: 1rem;
 }
 
-.link > p {
+.link>p {
     color: var(--text-color);
 }
 
@@ -92,17 +92,57 @@ main {
     border-radius: 50%;
 }
 
-.twitter , .blog {
+.twitterLink,
+.blogLink {
     text-decoration: none;
     color: var(--text-color);
 }
 
-.twitter:hover , .blog:hover {
+.twitterLink:hover,
+.blogLink:hover {
     text-decoration: underline;
 }
 
+.linkSVG,
+.orgSVG {
+    -webkit-mask-size: 20px 20px;
+    mask-size: 20px 20px;
+    width: 20px;
+    height: 20px;background-color: var(--text-color);
+}
 
+.locationSVG {
+    -webkit-mask: url("/img/location.svg");
+    mask: url("/img/location.svg");
 
+    -webkit-mask-size: 13px 20px;
+    mask-size: 13px 20px;
+
+    width: 13px;
+    height: 20px;
+     background-color: var(--text-color);
+}
+
+.twitterSVG {
+    -webkit-mask-image: url("/img/twitter.svg");
+    mask-image: url("/img/twitter.svg");
+
+    -webkit-mask-size: 20px 16px;
+    mask-size: 20px 16px;
+    width: 20px;
+    height: 16px;
+    background-color: var(--text-color);
+}
+
+.linkSVG {
+    -webkit-mask-image: url("/img/link.svg");
+    mask-image: url("/img/link.svg");
+}
+
+.orgSVG {
+    -webkit-mask-image: url("/img/org.svg");
+    mask-image: url("/img/org.svg");
+}
 
 
 @media (max-width: 550px) {
@@ -118,21 +158,22 @@ main {
 
     .user_details {
         grid-template-columns: 80px auto;
-        padding: 1rem;
+        padding: 2rem 1.5rem;
     }
 
     .joinDate {
         justify-self: start;
         font-size: 13px;
         text-align: justify;
+        margin-top: 0.25rem;
     }
 
-    .user_main {
+    .bio {
         grid-column: 1/-1;
-        margin-top: 1rem;
+        margin-top:  2rem;
     }
 
-    .user_main>p {
+    .bio {
         font-size: 13px;
         min-width: 100px;
     }
